styles.css
h1 {
  font-family: "Poppins", sans-serif;
  font-weight: 300;
}

h2,
h3 {
  font-family: "Poppins", sans-serif;
  font-weight: 500;
}

li {
  display: inline-block;
  padding: 10px;
  text-align: center;
  margin: 0 auto;
  list-style-position: inside;
  text-decoration: underline;
  color: #4394b2;
  font-family: "Poppins", sans-serif;
}

ul {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

li:hover {
  cursor: pointer;
}

button {
  width: 80%;
  height: 12%;
  margin: 10px;
  font-size: 1rem;
  cursor: pointer;
  text-align: center;
  border: none;
  border-radius: 8px;
  background: #028090;
  color: rgb(16, 18, 61);
}

button:hover,
button:focus {
  background: #068494;
  color: rgb(5, 6, 31);
}

p {
  font-family: "Lato", sans-serif;
  color: #454242;
  font-weight: 500;
}

body {
  display: flex;
  background-color: #dce6e5;
  flex-direction: column;
  align-items: center;
}

#summary {
  max-width: 500px;
  text-align: center;
}

#mainTitle {
  flex-direction: row;
}

#titleText {
  margin: 30px;
}

#titleWrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  margin: 10px;
}

#mainContent {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

#mainText {
  max-width: 100vw;
}

#membersHeader {
  align-self: center;
  align-content: center;
  text-align: center;
  padding: 5px;
  margin: 5px;
  border-radius: 25px;
  width: 100vw;
}

#names {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  flex-direction: row;
  align-items: center;
  align-content: center;
  justify-content: space-evenly center;
  justify-content: center;
  flex-shrink: 1;
  flex-grow: 1;
  flex-basis: 0;
}

.nameCard {
  background-color: #cdd362;
  padding: 10px;
  margin: 10px;
  height: fit-content;
  min-width: 300px;
  width: fit-content;
  align-content: center;
  color: rgb(183, 179, 179);
}

.nameCardEmail {
  background-color: #cdd362;
  padding: 10px;
  margin: 10px;
  height: 120px;
  width: 300px;
  align-content: center;
  color: rgb(183, 179, 179);
}

#agendasMinutesWrapper {
  justify-content: center;
  flex-shrink: 1;
  flex-grow: 1;
  flex-basis: 0;
  width: 70%;
  text-align: center;
}

#agendasMinutes {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
  flex-shrink: 1;
  flex-grow: 1;
  flex-basis: 0;
  width: 100%;
}

.galleryImage {
  width: 100%;
  height: auto;
  height: 300px;
}

.cardAgendaMinutes {
  display: flex;
  flex-direction: column;
  align-items: center;
  align-content: center;
  flex-wrap: wrap;
  text-align: center;
  background-color: #c46452;
  padding: 10px;
  margin: 10px;
  min-height: 250px;
  height: fit-content;
  min-width: 175px;
  width: fit-content;
  color: rgb(16, 18, 61);
}

img {
  object-fit: contain;
}

#info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

#info button {
  background-color: rgb(71, 88, 218);
  width: 30vw;
  height: 50px;
  color: rgb(212, 208, 208);
  max-width: 400px;
}

@media only screen and (max-width: 620px) {
  #titleWrapper {
    flex-direction: column;
    text-align: center;
  }

  body {
    flex-direction: column;
    align-items: center;
  }

  #mainContent {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-items: center;
  }

  #members {
    align-items: center;
    justify-content: center;
  }

  #membersHeader {
    align-self: flex-start;
    align-content: center;
    text-align: center;
  }

  #agendasMinutesWrapper {
    align-self: center;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    align-content: center;
    text-align: center;
  }

  #agendasMinutes {
    display: flex;
    align-self: center;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    align-content: center;
  }
}

@media only screen and (min-width: 975px) {
  #mainContent {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
  }

  #membersHeader {
    flex-shrink: 1;
    flex-grow: 1;
    flex-basis: 0;
    width: 80vw;
    max-width: 400px;
    align-self: flex-start;
  }

  #names {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: center;
    align-content: center;
    justify-content: space-evenly center;
    justify-content: center;
    flex-shrink: 1;
    flex-grow: 1;
    flex-basis: 0;
  }

  #agendasMinutesWrapper {
    display: flex;
    width: 70%;
    flex-shrink: 1;
    flex-grow: 1;
    flex-basis: 0;
    justify-content: center;
    flex-direction: column;
  }

  #agendasMinutes {
    display: inherit;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
    flex-shrink: 1;
    flex-grow: 1;
    flex-basis: 0;
    width: 100%;
  }
}

